--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Shared/Scripts/Character.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/", "res://Shared/Scripts/ReplicationStates/", "res://Shared/Prefabs/", "res://Client/Scripts/", "res://Client/Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Shared/Prefabs/character.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/", "res://Shared/Prefabs/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/", "res://Client/Scripts/", "res://Client/Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/Scenes/Main_Scene.tscn")
-current_scene="res://Shared/Scenes/Main_Scene.tscn"
+open_scenes=PackedStringArray("res://Shared/Prefabs/character.tscn")
+current_scene="res://Shared/Prefabs/character.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=3
-selected_bottom_panel_item=1
+selected_bottom_panel_item=0
 
 [EditorWindow]
 
