--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Shared/Prefabs/character.tscn")
+dock_filesystem_selected_paths=PackedStringArray("res://Shared/Scripts/MovementSimulation.cs")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/", "res://Shared/Prefabs/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/", "res://Client/Scripts/", "res://Client/Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
