--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,17 +9,17 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Shared/Scripts/MovementSimulation.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/", "res://Shared/Prefabs/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/", "res://Client/Scripts/", "res://Client/Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Shared/Prefabs/Characters/Default.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/ReplicationStates/", "res://Shared/Scenes/", "res://Shared/Prefabs/", "res://Shared/Prefabs/Characters/", "res://Shared/Prefabs/CharacterModelsImported/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/Scripts/", "res://Client/Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=0
+dock_split_2=-2
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=270
+dock_hsplit_2=341
 dock_hsplit_3=-554
 dock_hsplit_4=0
 dock_3="Scene,Import"
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/Prefabs/character.tscn")
-current_scene="res://Shared/Prefabs/character.tscn"
-center_split_offset=0
+open_scenes=PackedStringArray()
+current_scene=""
+center_split_offset=-460
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_bottom_panel_item=4
 
 [EditorWindow]
 
