--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/ReplicationStates/", "res://Shared/Scenes/", "res://Shared/Prefabs/", "res://Shared/Prefabs/Characters/", "res://Shared/Prefabs/CharacterModelsImported/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/Scripts/", "res://Client/Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Shared/Scripts/ReplicationStates/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/", "res://Shared/Scripts/ReplicationStates/", "res://Shared/Scenes/", "res://Shared/Prefabs/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/Scripts/", "res://Client/Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://Shared/Scenes/Main_Scene.tscn")
 current_scene="res://Shared/Scenes/Main_Scene.tscn"
 center_split_offset=-308
-selected_default_debugger_tab_idx=0
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
