--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Shared/Prefabs/CharacterModelsImported/Y Bot.fbx")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Prefabs/", "res://Shared/Prefabs/Characters/", "res://Shared/Prefabs/CharacterModelsImported/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/", "res://Client/Scripts/", "res://Client/Scenes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Client/Scripts/CameraController.cs")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Shared/", "res://Shared/Scripts/", "res://Shared/Prefabs/", "res://Shared/Prefabs/Characters/", "res://Shared/Prefabs/CharacterModelsImported/", "res://Server/", "res://Server/Scripts/", "res://Server/Scenes/", "res://Client/", "res://Client/Scripts/", "res://Client/Scenes/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -28,10 +28,10 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Shared/Prefabs/character.tscn")
-current_scene="res://Shared/Prefabs/character.tscn"
+open_scenes=PackedStringArray("res://Shared/Prefabs/character.tscn", "res://Client/Scenes/Combat_Test.tscn")
+current_scene="res://Client/Scenes/Combat_Test.tscn"
 center_split_offset=-401
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=3
 selected_bottom_panel_item=0
 
@@ -53,7 +53,7 @@ zoom_factor=1.0
 
 [GameView]
 
-floating_window_rect=Rect2i(0, 23, 1920, 1017)
+floating_window_rect=Rect2i(0, 0, 1164, 695)
 floating_window_screen=0
 
 [ShaderEditor]
